添加用户列表页面

--- a/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<script src="~/Scripts/AdminUser/user.js"></script>
+<script src="~/Areas/Admins/Scripts/AdminUser/user.js"></script>
