--- a/SIMS.Web/Areas/Admins/Views/Shared/_Layout.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Shared/_Layout.cshtml
@@ -22,6 +22,24 @@
     <link rel="stylesheet" href="~/Areas/Admins/assets/css/xenon-skins.css">
     <link rel="stylesheet" href="~/Areas/Admins/assets/css/custom.css">
     <script src="~/Areas/Admins/assets/js/jquery-1.11.1.min.js"></script>
+
+    <!-- Imported styles on this page -->
+    <link rel="stylesheet" href="~/Areas/Admins/assets/js/datatables/dataTables.bootstrap.css">
+
+    <!-- Bottom Scripts -->
+    <script src="~/Areas/Admins/assets/js/datatables/js/jquery.dataTables.min.js"></script>
+
+    <!-- Imported scripts on this page -->
+    <script src="~/Areas/Admins/assets/js/datatables/dataTables.bootstrap.js"></script>
+    <script src="~/Areas/Admins/assets/js/datatables/yadcf/jquery.dataTables.yadcf.js"></script>
+    <script src="~/Areas/Admins/assets/js/datatables/tabletools/dataTables.tableTools.min.js"></script>
+
+    <!-- JavaScripts initializations and stuff -->
+    <script src="~/Areas/Admins/assets/js/xenon-custom.js"></script>
+    <script src="~/Areas/Admins/assets/js/datepicker/bootstrap-datetimepicker.min.js"></script>
+    <script src="~/Areas/Admins/assets/js/datepicker/bootstrap-datetimepicker.zh-CN.js"></script>
+
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
