--- a/SIMS.Web/Areas/Admins/Views/Account/Login.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Account/Login.cshtml
@@ -83,16 +83,16 @@
                                 };
 
                                 $.ajax({
-                                    url: "Login",
+                                    url: "/Admins/Account/Login",
                                     method: 'POST',
                                     dataType: 'json',
                                     data: {
-                                        strUserName: $(form).find('#username').val(),
+                                        strCode: $(form).find('#code').val(),
                                         strPassword: $(form).find('#passwd').val()
                                     },
                                     success: function (resp) {
-                                        if (resp.Result) {
-                                            window.location.href = '/Admins/default/index';
+                                        if (resp.Bresult) {
+                                            window.location.href = resp.Url;
                                         } else {
                                             alert(resp.Message);
                                         }
@@ -120,8 +120,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label text-left" for="username">用户名</label>
-                        <input type="text" class="form-control input-dark" name="username" id="username" autocomplete="off" />
+                        <label class="control-label text-left" for="code">编号</label>
+                        <input type="text" class="form-control input-dark" name="code" id="code" autocomplete="off" />
                     </div>
 
                     <div class="form-group">
