--- a/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="panel panel-default">
+﻿
+<div class="panel panel-default">
     @*<input type="hidden" id="hfrole" value="@ViewData["l"]" />*@
     <div class="panel-heading">
         <h3 class="panel-title">人员信息管理</h3>
@@ -13,7 +14,7 @@
                 <input type="text" id="Code" />
 
                 <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
-                <input type="button" value="新增" onclick="ShowModal();" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                <input type="button" value="新增" onclick="ShowModal(0);" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
 
             </div>
         </div>
