增加专业管理

--- a/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
@@ -23,4 +23,14 @@
     </div>
 </div>
 
+
+<!-- JavaScripts initializations and stuff -->
+<script src="~/Areas/Admins/assets/js/xenon-custom.js"></script>
+<script src="~/Areas/Admins/assets/js/datepicker/bootstrap-datetimepicker.min.js"></script>
+<script src="~/Areas/Admins/assets/js/datepicker/bootstrap-datetimepicker.zh-CN.js"></script>
+
+<script src="~/Areas/Admins/assets/js/daterangepicker/daterangepicker.js"></script>
+<script src="~/Areas/Admins/assets/js/datepicker/bootstrap-datepicker.js"></script>
+<script src="~/Areas/Admins/assets/js/timepicker/bootstrap-timepicker.min.js"></script>
+
 <script src="~/Areas/Admins/Scripts/AdminUser/user.js"></script>
