--- a/SIMS.Web/Areas/Admins/Views/Shared/_Layout.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Shared/_Layout.cshtml
@@ -175,7 +175,7 @@
                         <ul>
 
                             <li id="serviceAreasConfig">
-                                <a href="/Admins/Configs/ServiceAreasConfig">
+                                <a href="/Admins/Major/Index">
                                     <span class="title">专业管理</span>
                                 </a>
                             </li>
