--- a/SIMS.Web/Areas/Admins/Views/AdminUser/_UserModalPartial.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/_UserModalPartial.cshtml
@@ -14,13 +14,32 @@
 
                         <div class="form-group">
                             <label for="txtBtnCode" class="control-label">姓名</label>
-
                             <input type="text" class="form-control" id="Name">
                         </div>
-
                     </div>
-
                 </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="Grade" class="control-label">年级</label>
+                            @*<input type="text" id="Grade" class="form-control datepicker" data-start-view="2" >*@
+                            <select size="1" id="dp_Grade">
+                                <option value="2011" selected="selected">2011</option>
+                                <option value="2012">2012</option>
+                                <option value="2013">2013</option>
+                                <option value="2014">2014</option>
+                                <option value="2015">2015</option>
+                                <option value="2016">2016</option>
+                                <option value="2017">2017</option>
+                                <option value="2018">2018</option>
+                                <option value="2019">2019</option>
+                                <option value="2020">2020</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
