修改院系和专业

--- a/SIMS.Web/Areas/Admins/Views/Account/Login.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Account/Login.cshtml
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label text-left" for="code">编号</label>
+                        <label class="control-label text-left" for="code">账号</label>
                         <input type="text" class="form-control input-dark" name="code" id="code" autocomplete="off" />
                     </div>
 
