--- a/SIMS.Web/Areas/Admins/Views/Department/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Department/Index.cshtml
@@ -7,11 +7,11 @@
         <div id="msgInfo"></div>
         <div class="row">
             <div class="col-sm-12">
-                <label for="Code">编号： </label>
-                <input type="text" id="Name" />
+                <label for="sDepartmentName">名称:</label>
+                <input type="text" id="sDepartmentName" />
 
                 <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
-                <input type="button" value="新增" onclick="ShowModal(0,0,'','');" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                <input type="button" value="新增" onclick="ShowModal(0,0,'','','');" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
 
             </div>
         </div>
