--- a/SIMS.Web/Areas/Admins/Views/Department/_Actions.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Department/_Actions.cshtml
@@ -6,6 +6,7 @@
         var id = Model.Id;
         var name = Model.Name;
         var code = Model.Code;
+        var description = Model.Description;
         
         int? profession = -1;
         try
@@ -29,7 +30,7 @@
             {
                 //超级管理员
                 <div class="form-group" style="margin-top:5px;">
-                    <button type="button" class="btn btn-success   btn-xs" onclick="ShowModal(1, @id, '@code','@name')">修改</button>
+                    <button type="button" class="btn btn-success   btn-xs" onclick="ShowModal(1, @id, '@code','@name','@description')">修改</button>
                 </div>
                 <div class="form-group" style="margin-top:5px;">
                     <button type="button" class="btn btn-success   btn-xs" onclick="alert('删除!')">删除</button>
