--- a/SIMS.Web/Areas/Admins/Views/Major/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Major/Index.cshtml
@@ -7,17 +7,13 @@
         <div id="msgInfo"></div>
         <div class="row">
             <div class="col-sm-12">
-                @*<label for="Code">编号： </label>
-                <input type="text" id="Name" />*@
-
-                <label for="Code">学院(系): </label>
-                <label for="ddlDepartment">省：</label>
+                <label for="ddlDepartment">学院(系):：</label>
                 <select id="ddlDepartment" style="width:200px;">
                     <option value="0">--请选择--</option>
                 </select>
 
                 <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
-                <input type="button" value="新增" onclick="ShowModal(0,0,'','');" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                <input type="button" value="新增" onclick="ShowModal(0);" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
 
             </div>
         </div>
