--- a/SIMS.Web/Areas/Admins/Views/AdminUser/_UserModalPartial.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/_UserModalPartial.cshtml
@@ -66,8 +66,8 @@
                         <div class="form-group">
                             <label for="dp_department" class="control-label">系</label>
                             <select size="1" id="dp_department">
-                                <option value="男" selected="selected">计算机</option>
-                                <option value="女">机械</option>
+                                @*<option value="男" selected="selected">计算机</option>
+                                <option value="女">机械</option>*@
                             </select>
                         </div>
                     </div>
@@ -78,8 +78,8 @@
                         <div class="form-group">
                             <label for="dp_major" class="control-label">专业</label>
                             <select size="1" id="dp_major">
-                                <option value="男" selected="selected">计算机科学与技术</option>
-                                <option value="女">网络工程</option>
+                                @*<option value="男" selected="selected">计算机科学与技术</option>
+                                <option value="女">网络工程</option>*@
                             </select>
                         </div>
                     </div>
