--- a/SIMS.Web/Areas/Admins/Views/Major/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Major/Index.cshtml
@@ -13,7 +13,7 @@
                 </select>
 
                 <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
-                <input type="button" value="新增" onclick="ShowModal(0);" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                <input type="button" value="新增" onclick="ShowModal(0,0,0,0,'');" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
 
             </div>
         </div>
