--- a/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/AdminUser/Index.cshtml
@@ -6,18 +6,23 @@
     </div>
     <div class="panel-body">
         <div id="msgInfo"></div>
-        @*<input type="hidden" id="hfid" value="0" />
-            <input type="hidden" id="hftype" value="0" />*@
-        <div class="row">
-            <div class="col-sm-12">
-                <label for="Code">编号： </label>
-                <input type="text" id="Code" />
 
-                <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
-                <input type="button" value="新增" onclick="ShowModal(0);" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+        <form action="/Admins/AdminUser/Upload" enctype="multipart/form-data" method="post">
 
+            <div class="row">
+                <input type="file" name="file" style="margin-left:10px; margin-top:5px;" />
+                <input type="submit" value="Submit" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
             </div>
-        </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <label for="Code">编号： </label>
+                    <input type="text" id="Code" />
+                    <input type="button" value="查询" id="btnQuery" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                    <input type="button" value="新增" onclick="ShowModal(0);" style="margin-left:10px; margin-top:5px;" class="btn btn-secondary btn-sm btn-icon icon-left" />
+                </div>
+            </div>
+        </form>
+
         <table class="table table-bordered table-striped" id="_AdminUserTable"></table>
 
     </div>
