--- a/SIMS.Web/Areas/Admins/Views/Major/_Actions.cshtml
+++ b/SIMS.Web/Areas/Admins/Views/Major/_Actions.cshtml
@@ -8,6 +8,12 @@
     var currentUser = Session[AccountHashKeys.CurrentAdminUser] as AdminUser;
     var id = Model.Id;
     var profession = currentUser.Profession;
+
+    //var id = Model.Id;
+    var name = Model.Name;
+    var code = Model.Code;
+    var departmentId = Model.DepartmentId;
+    var description = Model.Description;
 }
 
 <div class="hidden-sm hidden-xs action-buttons text-left btn-group-vertical">
@@ -16,7 +22,7 @@
         {
             //超级管理员
             <div class="form-group" style="margin-top:5px;">
-                <button type="button" class="btn btn-success   btn-xs" onclick="alert('修改!')">修改</button>
+                <button type="button" class="btn btn-success   btn-xs" onclick="ShowModal(1, @id,'@name','@departmentId','@description')">修改</button>
             </div>
             <div class="form-group" style="margin-top:5px;">
                 <button type="button" class="btn btn-success   btn-xs" onclick="alert('删除!')">删除</button>
